--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 />
                 <div
                   aria-hidden="true"
-                  id="email"
+                  id="emailError"
                   class="error text-Red -mt-1 mb-2 hidden text-right text-xs italic"
                 ></div>
               </div>
@@ -107,15 +107,15 @@
                 Claim your free trial
               </button>
             </form>
-            <p class="text-grayishBlue mt-2 px-6 text-xs">
+            <p class="text-grayishBlue mt-2 px-6 text-smaller">
               By clicking the button, you are agreeing to our
-              <a href="#" class="text-Red font-bold">Terms and Services</a>
+              <a href="#" class="text-Red font-semibold">Terms and Services</a>
             </p>
           </div>
         </div>
       </article>
     </main>
     <div aria-hidden="true" class="border-Red"></div>
-    <script type="module" src="/main.js"></script>
+    <script defer type="module" src="./main.js"></script>
   </body>
 </html>
